--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,7 @@
 <p>it works by homker</p>
+<div class="toolbar">
+  <span class="add"></span>
+  <span class="add"></span>
+  <span class="add"></span>
+  <span class="add"></span>
+</div>
